@@ -1102,6 +1102,7 @@
     },
     "plantations": {
       "field": "Campo ({{index}})",
+      "harvest-weight": "Quantidade colhida: {{weight}} Kg",
       "description": "**Estação atual**: {{emoji}} _{{season}}_\n**Termina** <t:{{unix}}:R>",
       "seeds": "Sementes",
       "silo": "Plantas",
