@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 ### Added
 
 - Adicionado notificações para quando alguém compra alguma imagem que você criou.
+- Adicionado a informação de quantos Kg você colheu no `/fazendinha plantações`.
 
 ## [5.15.3] - 2024-05-08
 
